--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "antd": "^4.20.6",
     "axios": "^0.27.2",
     "echarts": "^5.3.2",
-    "node-sass": "^7.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
